projects/fsastorefrontstyles/scss/_main.scss
$color-white: #ffffff;
$color-black: #000000;
$color-dark-grey: #666666;
$color-body: $color-dark-grey;
$color-semi-dark-grey: #999999;
$color-grey: #cccccc;
$color-light-grey: #f5f5f5;
$color-mild-grey: #e9e9e9;
$color-blue: #0078c0;
$color-dark-blue: #263950;
$color-red: #ff0000;
$color-dark-red: #c90400;
$color-green: #3ab85d;
$color-yellow: #ffd200;
$color-orange: #f0ab00;
$color-heading: $color-dark-grey;
$color-heading-infos: $color-blue;
$color-link: $color-dark-grey;
$color-link-hover: #3498db;
$color-button-primary: $color-blue;
$color-button-primary-hover: $color-link-hover;
$color-button-secondary: $color-dark-blue;
$color-button-secondary-hover: #385980;
$color-mobile-menu-bckg: #2b3e51;
$color-mobile-menu-opaque: $color-button-secondary-hover;
$color-footer-links: $color-grey;
$color-footer-bckg: $color-dark-grey;
$color-footer-copyright-bckg: #555555;
$color-quotes-bckg: $color-light-grey;
$color-account-section-bckg: #154259;
$color-table-heading: $color-dark-blue;
$color-table-link: $color-blue;
$color-table-link-hover: $color-link-hover;
$color-colorbox-border: rgba(255, 255, 255, 0.3);
$color-cart-border: #e1e1e1;
$color-cart-top-border: #1b75ad;
$color-banking-blue: #48c8ff;
$color-banking-dark-blue: #00a1e4;
$color-banking-darker-blue: #0071bd;
$color-banking-darkest-blue: #00528a;

$screen-sm-mid: 768px;
$screen-xxs: 380px;

$border-grey: 1px solid $color-grey;
//Mixin for linear gradient background

//CSS Reset
button:focus {
  outline: none;
}
.center1400 {
  max-width: 1400px;
  width: 100%;
  margin: 0 auto;
}
@mixin linear-gradient-background(
  $startColor,
  $endColor,
  $firstStop,
  $secondStop
) {
  background: -webkit-linear-gradient(
    left,
    $startColor $firstStop,
    $endColor $secondStop
  );
  background: -o-linear-gradient(
    left,
    $startColor $firstStop,
    $endColor $secondStop
  );
  background: linear-gradient(
    to right,
    $startColor $firstStop,
    $endColor $secondStop
  );
}
.images__size {
  width: 100%;
  height: 100%;
}
.images__wrapper {
  border-radius: 50%;
  background-color: #ffffff;
  display: inline-block;
  vertical-align: middle;
  width: 62px;
  height: 62px;
  text-align: center;
  padding: 6px;
}
.cards {
  color: $color-dark-grey;
  &__wrapper {
    border: $border-grey;
    border-radius: 15px 15px 0 0;
    text-align: center;
    margin: 20px auto 20px;
    position: relative;
    display: block;
    &--border-primary {
      border-bottom: 1px solid $color-dark-blue;
    }
    &--border-secondary {
      border-bottom: 1px solid $color-blue;
    }
  }
  &__title {
    background-color: $color-mild-grey;
    border-radius: 15px 15px 0 0;
    padding: 20px 0;
    & > * {
      margin-top: 15px;
    }
    &--gradient-background {
      @include linear-gradient-background(
        $color-blue,
        $color-banking-darkest-blue,
        50%,
        100%
      );
    }
    &--border-primary {
      border-bottom: 4px solid $color-dark-blue;
    }
    &--border-secondary {
      border-bottom: 4px solid $color-blue;
    }
    .images__wrapper {
      background-color: transparent;
      width: 70px;
      height: auto;
      padding: 0;
      &--white-bck {
        background-color: $color-white;
        border-radius: 50%;
        padding: 10px;
      }
    }
  }
  &__caption,
  &__info {
    font-weight: bold;
    &--color-primary {
      color: $color-dark-blue;
    }
    &--color-secondary {
      color: $color-blue;
    }
    &--color-white {
      color: $color-white;
    }
  }
  &__details-wrapper {
    .cards__data {
      padding: 20px 0;
      &:nth-of-type(even) {
        background-color: $color-mild-grey;
      }
      .title {
        display: block;
        font-weight: 600;
      }
    }
    &--grey {
      background-color: $color-light-grey;
      .cards__data {
        &:nth-of-type(even) {
          background-color: $color-light-grey;
        }
      }
    }
  }
  &-button-wrapper {
    &--border-primary {
      border-top: 1px solid $color-dark-blue;
    }
    &--border-secondary {
      border-top: 1px solid $color-blue;
    }
  }
  &__button {
    margin: 0 auto;
    padding: 40px;
    max-width: 260px;
    [disabled] {
      opacity: 0.7;
      cursor: not-allowed;
    }
    &--spacing-mid {
      padding: 20px 40px;
    }
  }
}
.account-cards-actions {
  position: absolute;
  cursor: pointer;
  top: 14px;
  right: 14px;
  .action-links {
      color: $color-blue;
  }
}
/* *********************************************************** */
/* ************************ Buttons ************************* */
/* ********************************************************* */
@mixin transition {
  transition: all 300ms ease;
}
@mixin primary-btn-color {
  background-color: $color-button-primary !important;
  border-color: $color-button-primary !important;
  color: $color-white !important;
  &:hover,
  &:active,
  &:focus {
    background-color: $color-button-primary-hover !important;
    border-color: $color-button-primary-hover !important;
    color: $color-white !important;
  }
}
@mixin secondary-btn-color {
  background-color: $color-button-secondary !important;
  border-color: $color-button-secondary !important;
  color: $color-white !important;
  &:hover,
  &:active,
  &:focus {
    background-color: $color-button-secondary-hover !important;
    border-color: $color-button-secondary-hover !important;
    color: $color-white !important;
  }
}
@mixin secondary-btn-color-inverted {
  background-color: $color-white !important;
  border-color: $color-white !important;
  color: $color-dark-blue !important;
  &:hover,
  &:active,
  &:focus {
    opacity: 0.9;
  }
}
.primary-button,
.secondary-button,
.inverted {
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 10px;
  &__default {
    @include transition;
    width: 100%;
    height: 40px;
    line-height: 1;
    border: none;
    font-size: 16px;
    font-weight: 400;
    text-transform: uppercase;
    &--opacity {
      opacity: 0.7;
    }
    &--opacity-disabled {
      opacity: 0.2;
    }
  }
  &__account-policies {
    display: inline-block;
    font-size: 12px;
    padding: 14px;
    margin: 6px 0;
    white-space: nowrap;
  }
  &:hover {
    text-decoration: none;
  }
}
.primary-button {
  &__default {
    @include primary-btn-color();
  }
}
.btn-primary {
  @include primary-btn-color;
}
.btn-default {
  @include secondary-btn-color;
}
.secondary-button {
  &__default {
    @include secondary-btn-color;
  }
  &--inverted {
    @include secondary-btn-color-inverted;
  }
}
/* ************************************************************* */
/* ************************ Buttons end ************************ */
/* ************************************************************* */


// HEADER OVERRIDES
.y-header {
  color: $color-dark-grey;
  text-transform: uppercase;
  a, y-navigation .y-navigation__link, span.y-navigation__link {
    color: $color-dark-grey;
    text-transform: uppercase;
  }
  y-navigation {
    padding: 15px 30px;
  }
  nav .y-navigation__list {
    justify-content: flex-start;
    border-top: 1px solid $color-mild-grey;
    border-bottom: 1px solid $color-mild-grey;
    padding: 0;
    margin: 1rem 0;
  }
  #y-mobile-menu {
    .hamburger-inner {
      background-color: $color-dark-blue;
      &:before, &:after {
        background-color: $color-dark-blue; 
      }
    }
  }
  .y-search-box .y-search-box__input {
    border: 1px solid $color-dark-blue;
  }
}

